added CONTRIBUTING and updated README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# ParaMgmt - Parallel Management
+
 This project is a simple Python package with accompanying command-line
 executable scripts for controlling many hosts (servers, machines, switches,
 etc.) in parallel and with good error control. The package supports running
